[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/fade.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/stage_sel/stgfade.png" type="Texture" id=2]

[node name="fade" type="Node2D"]
script = ExtResource( 1 )

[node name="fade_mask" type="Sprite" parent="."]
position = Vector2( 0, 1.15648e-017 )
scale = Vector2( 128, 120 )
texture = ExtResource( 2 )

[node name="fade_fade" type="Tween" parent="."]
[connection signal="tween_completed" from="fade_fade" to="." method="_on_fade_fade_tween_completed"]
